2020-10-07 Wiley E. Hill <wileyhill@gmail.com>

    * src/iface/i_command.c: Revise log messages to eliminate line feed
      characters in translation text.

2020-10-03 Wiley E. Hill <wileyhill@gmail.com>

    * po/de.po: Update German translations.
    * po/en_GB.po: Update Great Britain.
    * po/fr.po: Update French translations.
    * po/kh.po: Update Khmer translations.
    * po/pl.po: Update Polish translations.
    * po/pt.po: Update Portuguese translations.
    * po/pt_BR.po: Update Brazilian Portuguese translations.
    * po/ru.po: Update Russian translations.

2020-10-01 Wiley E. Hill <wileyhill@gmail.com>

    * src/iface/i_command.c: Add function documentation:

        * i_command_router
        * i_command_engage
        * i_command_disengage

    * src/object/o_buffer.c: Utilize return list from geda_struct_place_set_place_list
      and eliminate call to geda_struct_place_get_place_list.

2020-09-30 Wiley E. Hill <wileyhill@gmail.com>

    * src/iface/i_event.c: Replace macro Current_PlaceList with
      geda_struct_place_get_place_list in i_event_paster_pressed.

    * src/object/*.c: Fix and update copyright dates.

    * src/object/o_buffer.c: Revise debug output in o_buffer_paste_start.

    * src/object/o_redraw.c: Utilize defined LAST_DRAWB_MODE_NONE.

2020-09-29 Wiley E. Hill <wileyhill@gmail.com>

    * src/object/o_buffer.c: Add pointer to toplevel in o_buffer_paste_start,
      utilize geda_struct_place_append_place_list to replace Current_PlaceList.

    * src/x/x_event.c: Replace Current_PlaceList geda_struct_place_get_place_list
      in x_event_button_released.

2020-09-28 Wiley E. Hill <wileyhill@gmail.com>

    * include/gschem_macros.h: Relocate function styled macros from
      gschem_globals.h.

    * src/iface/i_command.c: Add function documentation:

        * set_last_command
        * i_command_dispatch

    * src/object/o_text.c: Revise function o_text_prepare_place to utilize