@@ -1,3 +1,9 @@
+2020-10-08 Wiley E. Hill <wileyhill@gmail.com>
+
+    * src/iface/i_command.c: Add function documentation:
+
+        * i_command_get_command_list
+
 2020-10-07 Wiley E. Hill <wileyhill@gmail.com>
 
     * src/iface/i_command.c: Revise log messages to eliminate line feed
